# src/API/BlazoredDreams.Core/BlazoredDreams.Application/Users/Models/UserDto.cs
@@ -1,0 +1,9 @@
+namespace BlazoredDreams.Application.Users.Models
+{
+	public class UserDto
+	{
+		public string UserId { get; set; }
+		public string Username { get; set; }
+		public string Email { get; set; }
+	}
+}
